fix: navbar, image overlap and make resposive

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -8,3 +8,9 @@
 	gap: 1rem;
 	place-items: center;
 }
+
+@media (max-width: 768px) {
+	.image-grid {
+		grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+	}
+}
